libqt6c/src/libqaccessible.hpp

typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleTableInterface QAccessibleTableInterface;
typedef struct QAccessibleTableModelChangeEvent QAccessibleTableModelChangeEvent;
int QAccessibleTableInterface_SelectedRowCount(const QAccessibleTableInterface* self);
int QAccessibleTableInterface_ColumnCount(const QAccessibleTableInterface* self);
int QAccessibleTableInterface_RowCount(const QAccessibleTableInterface* self);
libqt_list /* of int */ QAccessibleTableInterface_SelectedColumns(const QAccessibleTableInterface* self);
libqt_list /* of int */ QAccessibleTableInterface_SelectedRows(const QAccessibleTableInterface* self);
bool QAccessibleTableInterface_IsColumnSelected(const QAccessibleTableInterface* self, int column);
bool QAccessibleTableInterface_IsRowSelected(const QAccessibleTableInterface* self, int row);
bool QAccessibleTableInterface_SelectRow(QAccessibleTableInterface* self, int row);
bool QAccessibleTableInterface_SelectColumn(QAccessibleTableInterface* self, int column);
bool QAccessibleTableInterface_UnselectRow(QAccessibleTableInterface* self, int row);
bool QAccessibleTableInterface_UnselectColumn(QAccessibleTableInterface* self, int column);
void QAccessibleTableInterface_ModelChange(QAccessibleTableInterface* self, QAccessibleTableModelChangeEvent* event);
QStringList QAccessibleActionInterface_ActionNames(const QAccessibleActionInterface* self);
libqt_string QAccessibleActionInterface_LocalizedActionName(const QAccessibleActionInterface* self, const libqt_string name);
libqt_string QAccessibleActionInterface_LocalizedActionDescription(const QAccessibleActionInterface* self, const libqt_string name);
void QAccessibleActionInterface_DoAction(QAccessibleActionInterface* self, const libqt_string actionName);
QStringList QAccessibleActionInterface_KeyBindingsForAction(const QAccessibleActionInterface* self, const libqt_string actionName);
libqt_string QAccessibleActionInterface_PressAction();
libqt_string QAccessibleActionInterface_IncreaseAction();
libqt_string QAccessibleActionInterface_DecreaseAction();
libqt_string QAccessibleActionInterface_ShowMenuAction();
libqt_string QAccessibleActionInterface_SetFocusAction();
libqt_string QAccessibleActionInterface_ToggleAction();
libqt_string QAccessibleActionInterface_ScrollLeftAction();
libqt_string QAccessibleActionInterface_ScrollRightAction();
libqt_string QAccessibleActionInterface_ScrollUpAction();
libqt_string QAccessibleActionInterface_ScrollDownAction();
libqt_string QAccessibleActionInterface_NextPageAction();
libqt_string QAccessibleActionInterface_PreviousPageAction();