QtBeef/src/Qt/qaccessible.bf

	
	public function void QAccessibleTableInterface_OnSelectedColumnCount_action(void* self);
	[LinkName("QAccessibleTableInterface_OnSelectedColumnCount")]
	public static extern c_int QAccessibleTableInterface_OnSelectedColumnCount(void* self, QAccessibleTableInterface_OnSelectedColumnCount_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperSelectedColumnCount")]
	public static extern c_int QAccessibleTableInterface_SuperSelectedColumnCount(void* self);
	[LinkName("QAccessibleTableInterface_SelectedRowCount")]
	public static extern c_int QAccessibleTableInterface_SelectedRowCount(void* self);
	
	public function void QAccessibleTableInterface_OnSelectedRowCount_action(void* self);
	[LinkName("QAccessibleTableInterface_OnSelectedRowCount")]
	public static extern c_int QAccessibleTableInterface_OnSelectedRowCount(void* self, QAccessibleTableInterface_OnSelectedRowCount_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperSelectedRowCount")]
	public static extern c_int QAccessibleTableInterface_SuperSelectedRowCount(void* self);
	[LinkName("QAccessibleTableInterface_ColumnCount")]
	public static extern c_int QAccessibleTableInterface_ColumnCount(void* self);
	
	public function void QAccessibleTableInterface_OnColumnCount_action(void* self);
	[LinkName("QAccessibleTableInterface_OnColumnCount")]
	public static extern c_int QAccessibleTableInterface_OnColumnCount(void* self, QAccessibleTableInterface_OnColumnCount_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperColumnCount")]
	public static extern c_int QAccessibleTableInterface_SuperColumnCount(void* self);
	[LinkName("QAccessibleTableInterface_RowCount")]
	public static extern c_int QAccessibleTableInterface_RowCount(void* self);
	
	public function void QAccessibleTableInterface_OnRowCount_action(void* self);
	[LinkName("QAccessibleTableInterface_OnRowCount")]
	public static extern c_int QAccessibleTableInterface_OnRowCount(void* self, QAccessibleTableInterface_OnRowCount_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperRowCount")]
	public static extern c_int QAccessibleTableInterface_SuperRowCount(void* self);
	[LinkName("QAccessibleTableInterface_SelectedColumns")]
	public static extern void* QAccessibleTableInterface_SelectedColumns(void* self);
	
	public function void QAccessibleTableInterface_OnSelectedColumns_action(void* self);
	[LinkName("QAccessibleTableInterface_OnSelectedColumns")]
	public static extern void* QAccessibleTableInterface_OnSelectedColumns(void* self, QAccessibleTableInterface_OnSelectedColumns_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperSelectedColumns")]
	public static extern void* QAccessibleTableInterface_SuperSelectedColumns(void* self);
	[LinkName("QAccessibleTableInterface_SelectedRows")]
	public static extern void* QAccessibleTableInterface_SelectedRows(void* self);
	
	public function void QAccessibleTableInterface_OnSelectedRows_action(void* self);
	[LinkName("QAccessibleTableInterface_OnSelectedRows")]
	public static extern void* QAccessibleTableInterface_OnSelectedRows(void* self, QAccessibleTableInterface_OnSelectedRows_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperSelectedRows")]
	public static extern void* QAccessibleTableInterface_SuperSelectedRows(void* self);
	[LinkName("QAccessibleTableInterface_IsColumnSelected")]
	public static extern bool QAccessibleTableInterface_IsColumnSelected(void* self, c_int column);
	
	public function void QAccessibleTableInterface_OnIsColumnSelected_action(void* self, c_int column);
	[LinkName("QAccessibleTableInterface_OnIsColumnSelected")]
	public static extern bool QAccessibleTableInterface_OnIsColumnSelected(void* self, QAccessibleTableInterface_OnIsColumnSelected_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperIsColumnSelected")]
	public static extern bool QAccessibleTableInterface_SuperIsColumnSelected(void* self, c_int column);
	[LinkName("QAccessibleTableInterface_IsRowSelected")]
	public static extern bool QAccessibleTableInterface_IsRowSelected(void* self, c_int row);
	
	public function void QAccessibleTableInterface_OnIsRowSelected_action(void* self, c_int row);
	[LinkName("QAccessibleTableInterface_OnIsRowSelected")]
	public static extern bool QAccessibleTableInterface_OnIsRowSelected(void* self, QAccessibleTableInterface_OnIsRowSelected_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperIsRowSelected")]
	public static extern bool QAccessibleTableInterface_SuperIsRowSelected(void* self, c_int row);
	[LinkName("QAccessibleTableInterface_SelectRow")]
	public static extern bool QAccessibleTableInterface_SelectRow(void* self, c_int row);
	
	public function void QAccessibleTableInterface_OnSelectRow_action(void* self, c_int row);
	[LinkName("QAccessibleTableInterface_OnSelectRow")]
	public static extern bool QAccessibleTableInterface_OnSelectRow(void* self, QAccessibleTableInterface_OnSelectRow_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperSelectRow")]
	public static extern bool QAccessibleTableInterface_SuperSelectRow(void* self, c_int row);
	[LinkName("QAccessibleTableInterface_SelectColumn")]
	public static extern bool QAccessibleTableInterface_SelectColumn(void* self, c_int column);
	
	public function void QAccessibleTableInterface_OnSelectColumn_action(void* self, c_int column);
	[LinkName("QAccessibleTableInterface_OnSelectColumn")]
	public static extern bool QAccessibleTableInterface_OnSelectColumn(void* self, QAccessibleTableInterface_OnSelectColumn_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperSelectColumn")]
	public static extern bool QAccessibleTableInterface_SuperSelectColumn(void* self, c_int column);
	[LinkName("QAccessibleTableInterface_UnselectRow")]
	public static extern bool QAccessibleTableInterface_UnselectRow(void* self, c_int row);
	
	public function void QAccessibleTableInterface_OnUnselectRow_action(void* self, c_int row);
	[LinkName("QAccessibleTableInterface_OnUnselectRow")]
	public static extern bool QAccessibleTableInterface_OnUnselectRow(void* self, QAccessibleTableInterface_OnUnselectRow_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperUnselectRow")]
	public static extern bool QAccessibleTableInterface_SuperUnselectRow(void* self, c_int row);
	[LinkName("QAccessibleTableInterface_UnselectColumn")]
	public static extern bool QAccessibleTableInterface_UnselectColumn(void* self, c_int column);
	
	public function void QAccessibleTableInterface_OnUnselectColumn_action(void* self, c_int column);
	[LinkName("QAccessibleTableInterface_OnUnselectColumn")]
	public static extern bool QAccessibleTableInterface_OnUnselectColumn(void* self, QAccessibleTableInterface_OnUnselectColumn_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperUnselectColumn")]
	public static extern bool QAccessibleTableInterface_SuperUnselectColumn(void* self, c_int column);
	[LinkName("QAccessibleTableInterface_ModelChange")]
	public static extern void QAccessibleTableInterface_ModelChange(void* self, void** event);
	
	public function void QAccessibleTableInterface_OnModelChange_action(void* self, void** event);
	[LinkName("QAccessibleTableInterface_OnModelChange")]
	public static extern void QAccessibleTableInterface_OnModelChange(void* self, QAccessibleTableInterface_OnModelChange_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperModelChange")]
	public static extern void QAccessibleTableInterface_SuperModelChange(void* self, void** event);
	[LinkName("QAccessibleTableInterface_OperatorAssign")]
	public static extern void QAccessibleTableInterface_OperatorAssign(void* self, void** param1);
}
// --------------------------------------------------------------
// QAccessibleActionInterface
// --------------------------------------------------------------
[CRepr]
struct QAccessibleActionInterface_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
	public void Tr(String outStr, c_char* sourceText)
	{
		CQt.QAccessibleActionInterface_Tr(sourceText);
	}
	public void* ActionNames()
	{
		return CQt.QAccessibleActionInterface_ActionNames((.)this.Ptr);
	}
	public void LocalizedActionName(String outStr, String name)
	{
		CQt.QAccessibleActionInterface_LocalizedActionName((.)this.Ptr, libqt_string(name));
	}
	public void LocalizedActionDescription(String outStr, String name)
	{
		CQt.QAccessibleActionInterface_LocalizedActionDescription((.)this.Ptr, libqt_string(name));
	}
	public void DoAction(String actionName)
	{
		CQt.QAccessibleActionInterface_DoAction((.)this.Ptr, libqt_string(actionName));
	}
	public void* KeyBindingsForAction(String actionName)
	{
		return CQt.QAccessibleActionInterface_KeyBindingsForAction((.)this.Ptr, libqt_string(actionName));
	}
	public void PressAction(String outStr)
	{
		CQt.QAccessibleActionInterface_PressAction();
	}
	public void IncreaseAction(String outStr)
	{
		CQt.QAccessibleActionInterface_IncreaseAction();
	}
	public void DecreaseAction(String outStr)
	{
		CQt.QAccessibleActionInterface_DecreaseAction();
	}
	public void ShowMenuAction(String outStr)
	{
		CQt.QAccessibleActionInterface_ShowMenuAction();
	}
	public void SetFocusAction(String outStr)
	{
		CQt.QAccessibleActionInterface_SetFocusAction();
	}
	public void ToggleAction(String outStr)
	{
		CQt.QAccessibleActionInterface_ToggleAction();
	}
	public void ScrollLeftAction(String outStr)
	{
		CQt.QAccessibleActionInterface_ScrollLeftAction();
	}
	public void ScrollRightAction(String outStr)
	{
		CQt.QAccessibleActionInterface_ScrollRightAction();
	}
	public void ScrollUpAction(String outStr)
	{
		CQt.QAccessibleActionInterface_ScrollUpAction();
	}
	public void ScrollDownAction(String outStr)
	{
		CQt.QAccessibleActionInterface_ScrollDownAction();
	}
	public void NextPageAction(String outStr)
	{
		CQt.QAccessibleActionInterface_NextPageAction();
	}
	public void PreviousPageAction(String outStr)
	{
		CQt.QAccessibleActionInterface_PreviousPageAction();
	}
	public void Tr2(String outStr, c_char* sourceText, c_char* disambiguation)
	{
		CQt.QAccessibleActionInterface_Tr2(sourceText, disambiguation);
	}
	public void Tr3(String outStr, c_char* sourceText, c_char* disambiguation, c_int n)
	{
		CQt.QAccessibleActionInterface_Tr3(sourceText, disambiguation, n);
	}
}
